<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Account">
        <EditTextPreference
            app:key="name"
            app:title="@string/pref_name_Title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/messages_header">
        <ListPreference
            app:defaultValue="month"
            app:entries="@array/calendar_view_entries"
            app:entryValues="@array/calendar_view_values"
            app:key="calendar_view"
            app:title="@string/pref_calendar_view_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:key="default_calendar"
            app:title="Default Calendar" />

        <!--        <ListPreference-->
        <!--            app:defaultValue="month"-->
        <!--            app:entries="@array/timezone_entries"-->
        <!--            app:entryValues="@array/timezone_values"-->
        <!--            app:key="calendar_timezone"-->
        <!--            app:title="@string/pref_timezone_title"-->
        <!--            app:useSimpleSummaryProvider="true" />-->

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>

</PreferenceScreen>