<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.CalendarFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addEventBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_addEventButton"
        app:srcCompat="@drawable/round_add_circle_24" />

    <LinearLayout
        android:id="@+id/linearLayout_appTopBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout_viewMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="fixed">

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabItem_month" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_week"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabItem_week" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_halfWeek"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabItem_halfWeek" />

            <com.google.android.material.tabs.TabItem
                android:id="@+id/tabItem_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tabItem_day" />

        </com.google.android.material.tabs.TabLayout>

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:id="@+id/progressBar_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/frameLayout_calendarFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp" />
    </LinearLayout>
</FrameLayout>