<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flRegister"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context=".ui.login.RegisterFragment">


    <!--    <androidx.coordinatorlayout.widget.CoordinatorLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent">-->

    <!--    <ImageView-->
    <!--        android:id="@+id/ivLogo"-->
    <!--        android:layout_width="80dp"-->
    <!--        android:layout_height="80dp"-->
    <!--        android:layout_marginTop="50dp"-->
    <!--        android:background="@drawable/logo_bg"-->
    <!--        android:clipToOutline="true"-->
    <!--        android:src="@drawable/logo"-->
    <!--        app:layout_constraintEnd_toStartOf="@+id/guideline_right"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/guideline_left"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="5dp"
            android:text="@string/register_heading"
            android:textAlignment="center"
            android:textSize="50sp"
            app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="50dp"
            android:textSize="17sp"
            app:layout_constraintBottom_toTopOf="@id/tv_subtitle"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loRegisterUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/tv_subtitle"
            app:startIconContentDescription="Email Icon"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Username"
                android:inputType="textPersonName"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loRegisterEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/loRegisterUsername"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loRegisterPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/loRegisterEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_password"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--    <EditText-->
        <!--        android:id="@+id/et_register_password"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="50dp"-->
        <!--        android:layout_marginLeft="20dp"-->
        <!--        android:layout_marginRight="20dp"-->
        <!--        android:layout_marginBottom="10dp"-->
        <!--        android:hint="@string/prompt_password"-->
        <!--        android:inputType="textPassword"-->
        <!--        android:padding="15dp"-->
        <!--        android:textSize="15sp" />-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/loRegisterConfirmPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="Re-type Your Password"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:layout_constraintEnd_toStartOf="@id/guideline_right"
            app:layout_constraintStart_toStartOf="@id/guideline_left"
            app:layout_constraintTop_toBottomOf="@+id/loRegisterPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRegisterConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/prompt_password"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

        </com.google.android.material.textfield.TextInputLayout>
        <!--    -->
        <!--    <EditText-->
        <!--        android:id="@+id/et_register_confirm_password"-->
        <!--        android:layout_width="match_parent"-->
        <!--        android:layout_height="50dp"-->
        <!--        android:layout_marginLeft="20dp"-->
        <!--        android:layout_marginRight="20dp"-->
        <!--        android:hint="Re-type Your Password"-->
        <!--        android:inputType="textPassword"-->
        <!--        android:padding="15dp"-->
        <!--        android:textSize="15sp" />-->

        <Button
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Register"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="@id/guideline_left"
            app:layout_constraintRight_toRightOf="@id/guideline_right"
            app:layout_constraintTop_toBottomOf="@+id/loRegisterConfirmPassword" />

        <!-- Circular progress indicator -->
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/pbLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_register">


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_above="@id/swipeLeft"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_chevron_left" />

            <TextView
                android:id="@+id/swipeLeft"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="32dp"
                android:text="Swipe Right to Login"
                android:textSize="15sp" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    </androidx.coordinatorlayout.widget.CoordinatorLayout>-->

</FrameLayout>